--- a/View/instructor_dashboard.css
+++ b/View/instructor_dashboard.css
@@ -424,12 +424,12 @@ body.night #add-course button[type="submit"]:hover {
 
 /* General Night Mode Styles */
 body.night {
-  background-color: #2c2c2c; /* Dark background */
+  background-color: #1f1e1e; /* Dark background */
   color: #f0f0f0; /* Light text */
 }
 
 body.night header {
-  background-color: #444; /* Darker header */
+  background-color: #1a1919; /* Darker header */
   color: #ffffff; /* Light text */
 }
 
@@ -444,7 +444,7 @@ body.night p {
 }
 
 body.night #your-courses {
-  background-color: #333;
+  background-color: #222222;
   color: #f0f0f0;
 }
 
@@ -461,7 +461,7 @@ body.night #your-courses li a {
 }
 
 body.night #add-course {
-  background-color: #333;
+  background-color: #202020;
   color: #f0f0f0;
   border: 1px solid #4e4d4d;
 }
